@@ -1,7 +1,6 @@
 package de.c0debase.bot.commands;
 
 import de.c0debase.bot.core.Codebase;
-import net.dv8tion.jda.core.Permission;
 import net.dv8tion.jda.core.entities.ChannelType;
 import net.dv8tion.jda.core.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.core.hooks.ListenerAdapter;
@@ -9,31 +8,34 @@ import org.reflections.Reflections;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.*;
-
-/**
- * @author Biosphere
- * @date 23.01.18
- */
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.Set;
 
 public class CommandManager extends ListenerAdapter {
-
     private static final Logger logger = LoggerFactory.getLogger(CommandManager.class);
 
-    private final Codebase bot;
-    private List<Command> availableCommands;
+    private static final long TEAM_ROLE_ID = 361603492642684929L;
+
+    private final Set<Command> availableCommands;
 
     public CommandManager(final Codebase bot) {
-        this.bot = bot;
-        this.availableCommands = Collections.synchronizedList(new ArrayList<>());
-        final Set<Class<? extends Command>> classes = new Reflections("de.c0debase.bot.commands").getSubTypesOf(Command.class);
-        classes.forEach(cmdClass -> {
+        final Codebase bot1 = bot;
+        this.availableCommands = new HashSet<>();
+        final Set<Class<? extends Command>> classes = new Reflections("de.c0debase.bot.commands")
+                .getSubTypesOf(Command.class);
+        for (Class<? extends Command> cmdClass : classes) {
             try {
-                registerCommands(cmdClass.newInstance());
-            } catch (Exception ex) {
-                ex.printStackTrace();
+                final Command command = cmdClass.getDeclaredConstructor().newInstance();
+                command.setInstance(bot);
+                if (availableCommands.add(command)) {
+                    logger.info("Registered " + command.getCommand() + " Command");
+                }
+            } catch (Exception exception) {
+                logger.error("Error while registering Command!", exception);
             }
-        });
+        }
         bot.getJDA().addEventListener(this);
     }
 
@@ -42,21 +44,25 @@ public class CommandManager extends ListenerAdapter {
         if (event.getAuthor().isBot()) {
             return;
         }
-        if (event.isFromType(ChannelType.PRIVATE)) {
+        if (!event.isFromType(ChannelType.TEXT)) {
             return;
         }
-        if (event.getChannel().getName() == "bot" || event.getMessage().getContentRaw().startsWith("!clear")) {
-            final String[] arguments = event.getMessage().getContentRaw().split(" ");
+        final String content = event.getMessage().getContentRaw();
+        if (event.getChannel().getName().equals("bot") || content.startsWith("!clear")) {
+            final String[] arguments = content.split(" ");
+            final String input = arguments[0].replaceFirst("!", "");
             for (Command command : this.availableCommands) {
-                if (command.getCategory().equals(Command.Category.STAFF) && !event.getMember().hasPermission(Permission.BAN_MEMBERS)) {
+                if (command.getCategory().equals(Command.Category.STAFF) && !event.getMember().getRoles()
+                        .contains(event.getJDA().getRoleById(TEAM_ROLE_ID))) {
                     continue;
                 }
-                if (("!" + command.getCommand()).equalsIgnoreCase(arguments[0])) {
-                    command.execute(bot, Arrays.copyOfRange(arguments, 1, arguments.length), event.getMessage());
+
+                if ((command.getCommand()).equalsIgnoreCase(input)) {
+                    command.execute(Arrays.copyOfRange(arguments, 1, arguments.length), event.getMessage());
                 } else {
                     for (String alias : command.getAliases()) {
-                        if (("!" + alias).equalsIgnoreCase(arguments[0])) {
-                            command.execute(bot, Arrays.copyOfRange(arguments, 1, arguments.length), event.getMessage());
+                        if (alias.equalsIgnoreCase(input)) {
+                            command.execute(Arrays.copyOfRange(arguments, 1, arguments.length), event.getMessage());
                         }
                     }
                 }
@@ -64,15 +70,7 @@ public class CommandManager extends ListenerAdapter {
         }
     }
 
-
-    private void registerCommands(final Command command) {
-        if (!availableCommands.contains(command)) {
-            availableCommands.add(command);
-            logger.info("Registered " + command.getCommand() + " Command");
-        }
-    }
-
-    public List<Command> getAvailableCommands() {
-        return Collections.unmodifiableList(availableCommands);
+    public Set<Command> getAvailableCommands() {
+        return Collections.unmodifiableSet(availableCommands);
     }
 }
